--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  supabase_flutter: ^2.5.6
+  go_router: ^14.6.0
+  shared_preferences: ^2.3.2
+  image_picker: ^1.1.2
+  fl_chart: ^0.69.0
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
