--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
   fl_chart: ^0.69.0
-  awesome_notifications: ^0.9.3+1
+  awesome_notifications: ^0.10.1
 
 dev_dependencies:
   flutter_test:
