--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   tflite_flutter: ^0.12.1
   fl_chart: ^0.69.0
   awesome_notifications: ^0.10.1
+  pdf: ^3.10.8
+  printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
